--- a/module1/index.html
+++ b/module1/index.html
@@ -7,23 +7,27 @@
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
+  <script src="js/angular.min.js"></script>
+  <script src="js/app.js"></script>
   </head>
-<body>
-   <div class="container">
-     <h1>Lunch Checker</h1>
+  <body ng-app="LunchCheck">
+     <div class="container" ng-controller="LunchCheckController">
+       <h1>Lunch Checker</h1>
 
-         <div class="form-group">
-             <input id="lunch-menu" type="text"
-             placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
-         </div>
-         <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
-         </div>
-         <div class="form-group message">
-           <!-- Your message can go here. -->
-         </div>
-   </div>
-
-</body>
+           <div class="form-group">
+             <!-- empty items not considered-->
+               <input id="lunch-menu" type="text"
+               placeholder="list comma separated dishes you usually have for lunch"
+               class="form-control"
+               ng-model="txtEntered">
+           </div>
+           <div class="form-group">
+               <button ng-click="getStatus()" class="btn btn-default">Check If Too Much</button>
+           </div>
+           <div class="form-group message">
+             <!-- Your message can go here. -->
+             {{msg}}
+           </div>
+     </div>
+  </body>
 </html>
